Move the javascript Code to script.js file

--- a/index.html
+++ b/index.html
@@ -94,25 +94,7 @@
             </tr>
         </table>
     </div>
-    <script>
-      function keyInput(value){
-        document.getElementById('screen').value += value
-      }
-      function backspace(){
-        let value = document.getElementById('screen').value.slice(0,-1)
-        document.getElementById('screen').value = value
-      }
-
-      function clr(){
-        document.getElementById("screen").value = ""
-      }
-
-      function solve(){
-        let value = document.getElementById("screen").value
-        let result = eval(value)
-        document.getElementById('screen').value = result
-      }
-    </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
